--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -100,7 +100,7 @@
           <!-- completed -->
           <div class="step completed">
             <div class="v-stepper">
-              <div class="circle"></div>
+              <div class="circle"><span class="dot"></span></div>
               <div class="line"></div>
             </div>
 
@@ -115,7 +115,7 @@
           <!-- active -->
           <div class="step active">
             <div class="v-stepper">
-              <div class="circle"></div>
+              <div class="circle"><span class="number">1</span></div>
               <div class="line"></div>
             </div>
             <div class="step-content">
@@ -210,7 +210,7 @@
                   </div>
                 </div>
                 <span
-                  >Issue registering mobile number ?
+                  >Issue registering mobile number?
                   <a href="http://">Contact Us</a></span
                 >
               </form>
@@ -220,7 +220,7 @@
           <!-- active -->
           <div class="step active">
             <div class="v-stepper">
-              <div class="circle"></div>
+              <div class="circle"><span class="number">2</span></div>
               <div class="line"></div>
             </div>
 
@@ -248,9 +248,9 @@
           </div>
 
           <!-- regular -->
-          <div class="step">
+          <div class="step active">
             <div class="v-stepper">
-              <div class="circle"></div>
+              <div class="circle"><span class="number">3</span></div>
               <div class="line"></div>
             </div>
 
