github issue fixed

--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -23,7 +23,7 @@
 
   <body class="bg-F4F2EB">
     <!-- Hero -->
-    <div class="hero-section-ty hero-clip-path bg-F4F2EB">
+    <div class="hero-section-ty hero-clip-path-ty bg-F4F2EB">
       <main class="container-class">
         <h3>
           Thank You Shiv
@@ -211,7 +211,11 @@
                 </div>
                 <span
                   >Issue registering mobile number?
-                  <a href="http://">Contact Us</a></span
+                  <a
+                    target="_blank"
+                    href="https://api.whatsapp.com/send/?phone=917499014868&text&type=phone_number&app_absent=0"
+                    >Contact Us</a
+                  ></span
                 >
               </form>
             </div>
@@ -232,16 +236,26 @@
                   activities from
                 </p>
                 <div class="ty-store-icons">
-                  <img
-                    style="width: 128px; height: 41px"
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/app-store.svg"
-                    alt="party-popper"
-                  />
-                  <img
-                    style="width: 128px; height: 41px"
-                    src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/play-store.svg"
-                    alt="party-popper"
-                  />
+                  <a
+                    target="_blank"
+                    href="https://apps.apple.com/in/app/satvic-app/id6450008773"
+                  >
+                    <img
+                      style="width: 128px; height: 41px"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/app-store.svg"
+                      alt="app-store"
+                    />
+                  </a>
+                  <a
+                    target="_blank"
+                    href="https://play.google.com/store/apps/details?id=com.satvic.movement&hl=en_IN"
+                  >
+                    <img
+                      style="width: 128px; height: 41px"
+                      src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/thank-you/play-store.svg"
+                      alt="play-store"
+                    />
+                  </a>
                 </div>
               </div>
             </div>
@@ -295,15 +309,18 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer class="footer-bottom">
-      <div class="container-class footer-data">
+    <footer class="footer-bottom-ty">
+      <div class="container-class footer-data-ty">
         <img
-          class="logo-footer"
+          class="logo-footer-ty"
           src="https://satvic-new-website.s3.ap-south-1.amazonaws.com/images/workshop/detail/sm-footer-logo.svg"
         />
-        <div class="footer-ul">
+        <div class="ty-footer-ul">
           <span>&copy; 2025 Satvic Movement </span> <span>|</span>
-          <a target="_blank" href="https://satvicmovement.org/privacy-policy"
+          <a
+            class="privacy-policy"
+            target="_blank"
+            href="https://satvicmovement.org/privacy-policy"
             >Privacy Policy</a
           >
         </div>
