github issue fixed

--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
                     </div>
                   </div>
                   <!-- <hr class="mt-30 divider" /> -->
-                  <div class="testimonials-other mt-30">
+                  <div class="testimonials-other">
                     <div class="testimoni-top d-flex gap-20 align-items-center">
                       <div class="highlighted-testimoni-image m-0">
                         <img
@@ -1483,7 +1483,8 @@
                         If you're unsure, just attend—it could change your life!
                         "You live only once, so if you want to enjoy your life
                         in the true sense, just go enroll yourself into this
-                        workshop". It could add ten years to your life!
+                        workshop". It could
+                        <strong>add ten years to your life!</strong>
                       </p>
                     </div>
                   </div>
@@ -1518,8 +1519,8 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         I had been suffering from psoriasis for 10 years, but by
                         following a few things from this workshop, I have seen a
-                        drastic reduction in my psoriasis. I am so grateful that
-                        I joined this program.
+                        <strong>drastic reduction in my psoriasis.</strong> I am
+                        so grateful that I joined this program.
                       </p>
                     </div>
                   </div>
@@ -1556,13 +1557,14 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         The 21-day journey has nourished my soul. It has not
                         just impacted my physical and mental health, this
-                        program has uplifted my consciousness. It has been a
-                        beautiful journey.
+                        program has
+                        <strong>uplifted my consciousness.</strong> It has been
+                        a beautiful journey.
                       </p>
                     </div>
                   </div>
                   <hr class="mt-30 divider" />
-                  <div class="testimonials-other mt-30">
+                  <div class="testimonials-other">
                     <div class="testimoni-top d-flex gap-20 align-items-center">
                       <div class="highlighted-testimoni-image m-0">
                         <img
@@ -1590,10 +1592,10 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        The biggest benefit I gained is that my gut health has
-                        improved. You owe it to yourself. This workshop is an
-                        excellent program where practical knowledge is shared in
-                        actionable ways.
+                        The biggest benefit I gained is that my
+                        <strong>gut health has improved.</strong> You owe it to
+                        yourself. This workshop is an excellent program where
+                        practical knowledge is shared in actionable ways.
                       </p>
                     </div>
                   </div>
@@ -1628,7 +1630,9 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         For the past 15 years, I have struggled with getting
                         deep sleep at night. After attending this workshop, I am
-                        now able to fall asleep much quicker than ever before.
+                        now able to
+                        <strong>fall asleep much quicker</strong> than ever
+                        before.
                       </p>
                     </div>
                   </div>
@@ -1661,7 +1665,7 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        I lost 8 kgs in just 21 days and gained so much
+                        I <strong>lost 8 kgs in just 21 days</strong> and gained so much
                         more—energy, confidence, and a new outlook on life. This
                         workshop isn’t just about weight loss; it’s a
                         transformation.
@@ -1697,7 +1701,7 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        Apart from building such important habits, I have
+                        Apart from <strong>building such important habits,</strong> I have
                         laughed, danced, looked inwards, got inspired by
                         everyone's posts and most importantly, stepped out of my
                         comfort zone.
@@ -1705,7 +1709,7 @@
                     </div>
                   </div>
 
-                  <div class="testimonials-other mt-30">
+                  <div class="testimonials-other">
                     <div class="testimoni-top d-flex gap-20 align-items-center">
                       <div class="highlighted-testimoni-image m-0">
                         <img
@@ -1734,7 +1738,7 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         The 21 days of this workshop were the most beautiful
-                        days of my life. The sessions were soo soo good that it
+                        days of my life. The <strong>sessions were soo soo good</strong> that it
                         made me jump out of the bed since day one. Each and
                         every session is etched deeply in my heart.
                       </p>
@@ -1771,8 +1775,8 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         I had extremely strained relationship with my in-laws.
                         After the session, I apologized to them. It was
-                        difficult but so worth it. I felt a lightness in my
-                        heart, as if years of weight had finally lifted.
+                        difficult but so worth it. I felt a <strong>lightness in my
+                          heart,</strong> as if years of weight had finally lifted.
                       </p>
                     </div>
                   </div>
@@ -1806,8 +1810,8 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         The knowledge was extremely empowering. Now when I go to
-                        restaurants or parties, my body doesn't crave pizza and
-                        pasta. I can sense a natural self control within me.
+                        restaurants or parties, <strong>my body doesn't crave pizza and
+                          pasta.</strong> I can sense a natural self control within me.
                       </p>
                     </div>
                   </div>
@@ -1842,12 +1846,12 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         This workshop changed my views towards everything. Since
                         I joined and followed these habits, I lost 4 kg. My hair
-                        shines. My skin is not dry or oily anymore. My acne has
-                        been reduced or almost gone.
+                        shines. My skin is not dry or oily anymore. My <strong>acne has
+                          been reduced or almost gone.</strong>
                       </p>
                     </div>
                   </div>
-                  <div class="testimonials-other mt-30">
+                  <div class="testimonials-other">
                     <div class="testimoni-top d-flex gap-20 align-items-center">
                       <div class="highlighted-testimoni-image m-0">
                         <img
@@ -1990,7 +1994,7 @@
                       </p>
                     </div>
                   </div>
-                  <div class="testimonials-other mt-30">
+                  <div class="testimonials-other">
                     <div class="testimoni-top d-flex gap-20 align-items-center">
                       <div class="highlighted-testimoni-image m-0">
                         <img
@@ -2017,8 +2021,8 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        During the course of 21 days, I saw my relationships
-                        improving. I began to find the purpose of my life. I
+                        During the course of 21 days, <strong>I saw my relationships
+                          improving.</strong> I began to find the purpose of my life. I
                         used to look forward to every upcoming session. The
                         whole challenge was so inspiring.
                       </p>
@@ -2055,7 +2059,7 @@
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
                         During these 21 days, the sessions became the best part
-                        of my day. This workshop has transformed my life in ways
+                        of my day. This workshop has <strong>transformed my life</strong> in ways
                         words can't capture—it’s a feeling that can only be
                         experienced.
                       </p>
@@ -2091,7 +2095,7 @@
                       <p class="testimoni-text text-left p-0 pt-20">
                         Before this workshop, I felt like sleeping throughout
                         the day. The simple habit of eating early dinner has
-                        uplifted my energy levels like anything. I feel so much
+                        <strong>uplifted my energy levels</strong> like anything. I feel so much
                         more energetic.
                       </p>
                     </div>
@@ -2124,7 +2128,7 @@
                     </div>
                     <div class="testimoni-text-div">
                       <p class="testimoni-text text-left p-0 pt-20">
-                        This workshop has given me immense self-control. I used
+                        This workshop has given me <strong>immense self-control.</strong> I used
                         to have my dinner at 6:30, and attend the parties. To my
                         sheer surprise, I wasn't tempted to eat anything, even
                         at a single party.
@@ -2166,7 +2170,7 @@
               </div>
               <div class="d-flex gap-30 mt-30 who-is-for-div">
                 <div class="who-is-for-item">
-                  <div class="who-is-for-item-img">            
+                  <div class="who-is-for-item-img">
                     <img
                       width="64"
                       height="64"
@@ -3104,7 +3108,7 @@
     }
 
     // Get the session from the URL query parameter
-    const sessionType = getQueryParameter("session") || "multi"; // Default to "multi" if not provided
+    const sessionType = getQueryParameter("session") || "single"; // Default to "multi" if not provided
 
     // Get the session container where the content will be inserted
     const sessionContainer = document.getElementById("ws-time-slot-container");
@@ -3119,7 +3123,16 @@
 
     flipCards.forEach((card) => {
       card.addEventListener("click", function () {
-        this.querySelector(".flip-card-inner").classList.toggle("flipped");
+        const flipCardInner = this.querySelector(".flip-card-inner");
+
+        if (flipCardInner.classList.contains("flipped")) {
+          flipCardInner.classList.remove("flipped");
+          flipCardInner.classList.add("unflipped");
+        } else {
+          // Otherwise, flip it (remove unflipped, add flipped)
+          flipCardInner.classList.remove("unflipped");
+          flipCardInner.classList.add("flipped");
+        }
       });
     });
   </script>
